# fetch

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
fetch/: asgi.py  settings.py  urls.py  views.py  wsgi.py
receipts/: models.py  urls.py  views.py
receipts/migrations/: 0001_initial.py
