[tool.poetry]
name = "fetch"
version = "0.1.0"
description = "Receipt processor API for Fetch"
authors = ["Evan Dunn <35546160+evanddunn@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1.3"
poethepoet = "^0.30.0"
djangorestframework = "^3.15.2"

[tool.poe.tasks]
server = "poetry run python manage.py runserver"
migrate = "poetry run python manage.py migrate"
makemigrations = "poetry run python manage.py makemigrations"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
